create github pages

--- a/page2.html
+++ b/page2.html
@@ -21,12 +21,36 @@
   
 </head>
 <body>
-  
-  <script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="header1 cid-rrhZzs6zow" data-bg-video="https://www.youtube.com/watch?v=DeKoTvFKSuc" id="header16-39">
+
+    
+
+    <div class="mbr-overlay" style="opacity: 0.6; background-color: rgb(35, 35, 35);">
+    </div>
+
+    <div class="container">
+        <div class="row justify-content-md-center">
+            <div class="col-md-10 align-center">
+                <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">
+                    ABOUT ME</h1>
+                
+                <p class="mbr-text pb-3 mbr-fonts-style display-5">
+                    I'm Benjamin, I study Fashion Design. I find the creativity in product design methods really interesting, although I can find the rest a bit dry despite its importance. This blog documents my journey through an introduction to product design, my experiences and findings.<br></p>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-black-outline display-4" href="index.html">HOME</a> <a class="btn btn-md btn-black-outline display-4" href="page16.html">BLOG LINKS</a></div>
+            </div>
+        </div>
+    </div>
+
+</section>
+
+
+  <section class="engine"><a href="https://mobirise.info/n">simple web templates</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
+  <script src="assets/ytplayer/jquery.mb.ytplayer.min.js"></script>
+  <script src="assets/vimeoplayer/jquery.mb.vimeo_player.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
   
