create github pages

--- a/page2.html
+++ b/page2.html
@@ -34,15 +34,15 @@
                 <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">ABOUT ME</h1>
                 
                 <p class="mbr-text pb-3 mbr-fonts-style display-5">
-                    I'm Benjamin, I study Fashion Design. I find the creativity in product design methods really interesting, although I can find the rest a bit dry despite its importance. This blog documents my journey through an introduction to product design, my experiences and findings.<br></p>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-black-outline display-4" href="index.html">HOME</a> <a class="btn btn-md btn-black-outline display-4" href="page16.html">BLOG LINKS</a></div>
+                    I'm Benjamin, I study Fashion Design. I find the creativity in product design methods really interesting, although I can find the rest a bit dry despite its importance. This blog documents my journey, my experiences and findings&nbsp;through an introduction to product design.<br></p>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-primary-outline display-4" href="index.html">HOME</a> <a class="btn btn-md btn-primary-outline display-4" href="page16.html">BLOG LINKS</a></div>
             </div>
         </div>
     </div>
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">portfolio website templates</a></section><section class="header1 cid-rri3o9o17j" data-bg-video="https://www.youtube.com/watch?v=DeKoTvFKSuc" id="header16-3a">
+<section class="engine"><a href="https://mobirise.info/k">develop own website</a></section><section class="header1 cid-rri3o9o17j" data-bg-video="https://www.youtube.com/watch?v=DeKoTvFKSuc" id="header16-3a">
 
     
 
