--- a/page16.html
+++ b/page16.html
@@ -43,7 +43,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">amp template</a></section><section class="header1 cid-rn9YcyNrLl mbr-parallax-background" id="header16-1n">
+<section class="engine"><a href="https://mobirise.info/z">best html templates</a></section><section class="header1 cid-rn9YcyNrLl mbr-parallax-background" id="header16-1n">
 
     
 
@@ -186,7 +186,7 @@
 
                         <div class="card col-12 col-md-6">
                             <div class="icon-block">
-                                <a href="https://mobirise.co/">
+                                <a href="page10.html">
                                     <span class="mbr-iconfont mbri-mobile2"></span>
                                 </a>
                             </div>
