--- a/page7.html
+++ b/page7.html
@@ -40,7 +40,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">how to create your own web page</a></section><section class="header1 cid-rr1QZRMpzk mbr-parallax-background" id="header16-2s">
+<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="header1 cid-rr1QZRMpzk mbr-parallax-background" id="header16-2s">
 
     
 
