create github pages

--- a/page2.html
+++ b/page2.html
@@ -42,7 +42,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="header1 cid-rri3o9o17j" data-bg-video="https://www.youtube.com/watch?v=DeKoTvFKSuc" id="header16-3a">
+<section class="engine"><a href="https://mobirise.info/g">build your own website</a></section><section class="header1 cid-rri3o9o17j" data-bg-video="https://www.youtube.com/watch?v=DeKoTvFKSuc" id="header16-3a">
 
     
 
